# CoffeeApp

./: Dockerfile  README.md  cov.xml  coverage.lcov  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
CoffeeApp/: config.py  db.py
CoffeeApp/coffee_shop/: models.py  schemas.py
CoffeeApp/tests/: conftest.py  test_coffee_shops.py  test_users.py
CoffeeApp/user/: models.py  schemas.py
alembic/: env.py
alembic/versions/: 0611ed62238d_.py  675210a40f58_.py  c3338bb9e284_.py  f831e4cefef6_.py
