[tool.poetry]
name = "coffeeapp"
version = "0.1.0"
description = ""
authors = ["Bjorn Johnson <bjornkjohnson@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

