[tool.poetry]
name = "coffeeapp"
version = "0.1.0"
description = ""
authors = ["Bjorn Johnson <bjornkjohnson@gmail.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "3.9.18"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.31"
psycopg2 = "^2.9.9"
alembic = "^1.13.2"
pydantic = "^2.8.2"
httpx = "^0.27.0"
pytest = "^8.2.2"
pydantic-settings = "^2.3.4"
ruff = "^0.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

